# SPlugin

./: CMakeLists.txt  LICENSE  README.md
source/core/: CMakeLists.txt  dynamicLib.cpp  dynamicLib.h  export.h  pluginInstance.h  pluginManager.cpp  pluginManager.h
source/exemples/: CMakeLists.txt  test.cpp
